# R-ML-models

./: .gitignore  Cargo.toml  KNN_OPTIMAZATION_DRAFT.md  LINEAR_REGRESSION.md  README.md  RUST_PYTHON_SETUP.md  pyproject.toml
docs/: KNN.md  LINEAR_REGRESSION .md
impl/cpp-v2-cpu/: CMakeLists.txt
impl/cpp-v2-cpu/include/: linear_regression.hpp  linear_regression_c_api.hpp  linear_regression_v21.hpp  linear_regression_v22.hpp
impl/cpp-v2-cpu/src/: linear_regression.cpp  linear_regression_c_api.cpp  linear_regression_v21.cpp  linear_regression_v22.cpp
notebooks/: test_linear_regression.ipynb  test_sklearn_wrappers.ipynb
notebooks/benchmarks/: benchmark_linear_regression_speed.ipynb
notebooks/tests/: test_knn.ipynb  test_linear_regression.ipynb  test_sklearn_wrappers.ipynb
src/: decision_tree.rs  knn.rs  lib.rs  linear_regression.rs  model_base.rs
src/test/: test.ipynb  test_knn.ipynb  test_linear_regression.ipynb  test_sklearn_wrappers.ipynb
wrapper/: coreflux_cpp.py  cpp_linear_regression.py  sklearn_wrappers.py
